reactive form - in-built validators

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,4 +1,4 @@
-<form #form="ngForm" (ngSubmit)="onSubmit(form)">
+<!-- <form #form="ngForm" (ngSubmit)="onSubmit(form)">
     <h2>Login</h2>
 
     <div class="control-row">
@@ -33,8 +33,38 @@
       </div>
       @if (email.touched && email.dirty && email.invalid) {
         <p class="control-error">Invalid email entered.</p>
-      }
-      @if (password.touched && password.dirty && password.invalid) {
-      <p class="control-error">Invalid password entered. Password must be 6-chatacters long.</p>
-      }
+        }
+        @if (password.touched && password.dirty && password.invalid) {
+          <p class="control-error">Invalid password entered. Password must be 6-chatacters long.</p>
+          }
+        </form> -->
+
+<form [formGroup]="form" (ngSubmit)="onSubmit()">
+    <h2>Login</h2>
+
+    <div class="control-row">
+        <div class="control no-margin">
+            <label for="email">Email</label>
+            <input
+                id="email"
+                type="email"
+                [formControl]="form.controls.email"
+            />
+        </div>
+
+        <div class="control no-margin">
+            <label for="password">Password</label>
+            <input id="password" type="password" formControlName="password" />
+        </div>
+
+        <button class="button">Login</button>
+    </div>
+
+    @if (emailInvalid) {
+    <p class="control-error">Invalid email entered.</p>
+    } @if (passwordInvalid) {
+    <p class="control-error">
+        Invalid password entered. Password must be 6-chatacters long.
+    </p>
+    }
 </form>
