--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -7,7 +7,7 @@
         <input id="email" type="email" name="email" formControlName="email" />
     </div>
 
-    <div class="control-row">
+    <div class="control-row" formGroupName="passwords">
         <div class="control">
             <label for="password">Password</label>
             <input
@@ -54,7 +54,7 @@
             </div>
         </div>
 
-        <fieldset>
+        <fieldset formGroupName="address">
             <legend>Your Address</legend>
 
             <div class="control-row">
@@ -118,7 +118,7 @@
         </div>
     </div>
 
-    <fieldset>
+    <fieldset formArrayName="source">
         <legend>How did you find us?</legend>
         <div class="control">
             <input
@@ -126,26 +126,29 @@
                 id="google"
                 name="acquisition"
                 value="google"
-            />
-            <label for="google">Google</label>
-        </div>
-
-        <div class="control">
-            <input
+                formControlName="0"
+                />
+                <label for="google">Google</label>
+              </div>
+              
+              <div class="control">
+                <input
                 type="checkbox"
                 id="friend"
                 name="acquisition"
                 value="friend"
-            />
-            <label for="friend">Referred by friend</label>
-        </div>
-
-        <div class="control">
-            <input
+                formControlName="1"
+                />
+                <label for="friend">Referred by friend</label>
+              </div>
+              
+              <div class="control">
+                <input
                 type="checkbox"
                 id="other"
                 name="acquisition"
                 value="other"
+                formControlName="2"
             />
             <label for="other">Other</label>
         </div>
@@ -171,4 +174,8 @@
         </button>
         <button type="submit" class="button">Sign up</button>
     </p>
+
+    @if (form.touched && form.invalid) {
+      <p class="control-error">Invalid form -  please check form data.</p>
+    }
 </form>
